# STM32F407VGT6

./: CMakeLists.txt  gcc-arm-none-eabi.cmake  main.c  main.h  startup_stm32f407xx.s
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Build.yml
app/: CMakeLists.txt  app_startup.c  app_startup.h
config/: CMakeLists.txt  FreeRTOSConfig.h  stm32f4xx_hal_conf.h
core/: CMakeLists.txt  main.c  stm32f4xx_it.c
core/config/: CMakeLists.txt  stm32f4xx_hal_conf.h
core/include/: main.h
device/: CMakeLists.txt  STM32F407VGTx_FLASH.ld  stm32f407.svd
driver/: CMakeLists.txt
driver/cmsis/: CMakeLists.txt
driver/hal/: CMakeLists.txt
rtos/: CMakeLists.txt
rtos/freertos/: CMakeLists.txt
